--- a/Movie Recommender System.ipynb
+++ b/Movie Recommender System.ipynb
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
        "[100003 rows x 3 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
        "max       943.000000    1682.000000       5.000000"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +695,7 @@
        "[100003 rows x 4 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -910,7 +910,7 @@
        "[1664 rows x 8 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +951,7 @@
        "Name: mean, Length: 1664, dtype: float64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +992,7 @@
        "Name: count, Length: 1664, dtype: float64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1003,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1024,7 @@
        "Name: rating, Length: 1664, dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1147,7 +1147,7 @@
        "[1664 rows x 2 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1270,7 +1270,7 @@
        "[1664 rows x 2 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1282,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1400,7 +1400,7 @@
        "[1664 rows x 3 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1411,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1420,7 +1420,7 @@
        "<AxesSubplot:ylabel='Frequency'>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1443,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1452,7 +1452,7 @@
        "<AxesSubplot:ylabel='Frequency'>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1475,7 +1475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1578,7 +1578,7 @@
        "They Made Me a Criminal (1939)                       1.0   5.0"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1589,7 +1589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1614,7 +1614,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>count</th>\n",
-       "      <th>rating</th>\n",
+       "      <th>mean</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>title</th>\n",
@@ -1684,7 +1684,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                              count    rating\n",
+       "                              count      mean\n",
        "title                                        \n",
        "Star Wars (1977)              584.0  4.359589\n",
        "Contact (1997)                509.0  3.803536\n",
@@ -1701,18 +1701,18 @@
        "[100 rows x 2 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rating_mean_count_df.sort_values('count', ascending = False).head(100)"
+    "ratings_mean_count_df.sort_values('count', ascending = False).head(100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1737,7 +1737,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>count</th>\n",
-       "      <th>rating</th>\n",
+       "      <th>mean</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>title</th>\n",
@@ -1807,35 +1807,35 @@
        "</div>"
       ],
       "text/plain": [
-       "                                             count  rating\n",
-       "title                                                     \n",
-       "Á köldum klaka (Cold Fever) (1994)             1.0    3.00\n",
-       "Mille bolle blu (1993)                         1.0    1.00\n",
-       "Mat' i syn (1997)                              1.0    1.00\n",
-       "Marlene Dietrich: Shadow and Light (1996)      1.0    5.00\n",
-       "Man from Down Under, The (1943)                1.0    1.00\n",
-       "...                                            ...     ...\n",
-       "Underworld (1997)                              4.0    2.50\n",
-       "Faces (1968)                                   4.0    3.00\n",
-       "Underneath, The (1995)                         4.0    2.75\n",
-       "Two or Three Things I Know About Her (1966)    4.0    3.75\n",
-       "Two Deaths (1995)                              4.0    2.25\n",
+       "                                             count  mean\n",
+       "title                                                   \n",
+       "Á köldum klaka (Cold Fever) (1994)             1.0  3.00\n",
+       "Mille bolle blu (1993)                         1.0  1.00\n",
+       "Mat' i syn (1997)                              1.0  1.00\n",
+       "Marlene Dietrich: Shadow and Light (1996)      1.0  5.00\n",
+       "Man from Down Under, The (1943)                1.0  1.00\n",
+       "...                                            ...   ...\n",
+       "Underworld (1997)                              4.0  2.50\n",
+       "Faces (1968)                                   4.0  3.00\n",
+       "Underneath, The (1995)                         4.0  2.75\n",
+       "Two or Three Things I Know About Her (1966)    4.0  3.75\n",
+       "Two Deaths (1995)                              4.0  2.25\n",
        "\n",
        "[300 rows x 2 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rating_mean_count_df.sort_values('count').head(300)"
+    "ratings_mean_count_df.sort_values('count').head(300)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1844,7 +1844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2301,7 +2301,7 @@
        "[944 rows x 1664 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2312,7 +2312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2321,7 +2321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2338,7 +2338,7 @@
        "Name: Titanic (1997), dtype: float64"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2349,7 +2349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2369,7 +2369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2468,7 +2468,7 @@
        "[1664 rows x 1 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2479,7 +2479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2488,7 +2488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2600,7 +2600,7 @@
        "[1664 rows x 2 columns]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2611,7 +2611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2723,7 +2723,7 @@
        "[1356 rows x 2 columns]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2735,7 +2735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2847,7 +2847,7 @@
        "[1356 rows x 2 columns]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2858,7 +2858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2970,7 +2970,7 @@
        "[416 rows x 2 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2981,7 +2981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -3438,7 +3438,7 @@
        "[944 rows x 1664 columns]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3449,7 +3449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3458,7 +3458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -4041,7 +4041,7 @@
        "[1664 rows x 1664 columns]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4052,7 +4052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4061,7 +4061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -4110,7 +4110,7 @@
        "1  Star Wars (1977)        1"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4121,7 +4121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -4130,7 +4130,7 @@
        "'Liar Liar (1997)'"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4141,7 +4141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4153,7 +4153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -4174,7 +4174,7 @@
        "Name: Liar Liar (1997), Length: 1664, dtype: float64"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4182,13 +4182,6 @@
    "source": [
     "ratings_pred.sort_values(ascending = False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
